--- a/estilos.css
+++ b/estilos.css
@@ -1,48 +1,52 @@
 
 /* Reset de Estilos */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+
 * {
-    margin: 0; /* zerar a margem de todos os elementos */
-    padding: 0; /* zerar o espaçamento interno de todos os elementos */
-    box-sizing: border-box; /* incluir padding e borda no cálculo do tamanho do elemento */
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box; 
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: "Roboto Condensed";
+    background-color: #ab93d3;
 }
 
 header {
-    background-color: #333; /* cor de fundo */
-    color: #fff; /* cor do texto */
-    text-align: center; /* alinhamento centralizado */
+    background-color: #9778ca; 
+    color: #fff; 
+    text-align: center; 
     padding: 1rem;
 }
 
 nav ul {
-    list-style: none; /* Remove o estilo da lista */
+    list-style: none; 
 }
 
 nav li {
-    display: inline; /* Deixa os itens da lista em linha */
-    margin-right: 20px; /* Adiciona um espaçamento de 20px entre os itens da lista */
+    display: inline; 
+    margin-right: 20px; 
 }
 
 nav a {
-    text-decoration: none; /* Remove o sublinhado dos links */
-    font-weight: bold; /* Deixa o texto em negrito */
-    color: #fff; /* Cor do texto */
+    text-decoration: none;                           
+    font-weight: bold; 
+    color: #fff;        
 }
 
 main {
-    padding: 20px; /* espaçamento interno */
-    overflow: hidden; /* esconde o conteúdo que ultrapassa o tamanho do elemento */
+    padding: 20px; 
+    overflow: hidden; 
 }
 
 .card {
     width: calc(33.33% - 20px); /* 33.33% - 20px */
-    height: 500px; /* altura de 500px */
+    height: 440px; /* altura de 500px */
     margin: 10px; /* margem de 10px para cima e para baixo */
-    padding: 20px;
+    padding: 25px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -55,7 +59,7 @@ main {
 }
 
 .card button {
-    background-color: #333;
+    background-color:  #9778ca;
     color: #fff;
     border: none;
     padding: 8px 16px;
@@ -65,12 +69,38 @@ main {
 }
 
 .card button:hover {
-    background-color: #555; /* Muda a cor de fundo ao passar o mouse */
+    background-color:  #7b56b6; /* Muda a cor de fundo ao passar o mouse */
 }
 
 footer {
-    background-color: #333;
+    background-color: #9778ca;
     color: #fff;
     text-align: center;
     padding: 1rem;
+}
+
+nav ul li:hover {
+    background-color: #ab93d3;
+    border-radius: 15px 15px;
+}
+
+nav ul li {
+    padding: 6px 6px;
+    transition: all 1s ease;
+}
+
+h1 {
+    padding-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: calc(50% - 20px); /* 50% - 40px */
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .card {
+        width: 100%;
+    }
 }
